--- a/BCDSharing/Info.plist
+++ b/BCDSharing/Info.plist
@@ -19,20 +19,32 @@
 	<key>CFBundleShortVersionString</key>
 	<string>0.98</string>
 	<key>CFBundleVersion</key>
-	<string>15</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>我们需要通过访问照片应用来保存封面</string>
+	<string>16</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>NSExtensionActivationRule</key>
-			<string>TRUEPREDICATE</string>
+			<dict>
+				<key>NSExtensionActivationSupportsImageWithMaxCount</key>
+				<integer>1</integer>
+				<key>NSExtensionActivationSupportsText</key>
+				<true/>
+				<key>NSExtensionActivationSupportsWebURLWithMaxCount</key>
+				<integer>1</integer>
+			</dict>
 		</dict>
 		<key>NSExtensionMainStoryboard</key>
 		<string>MainInterface</string>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.share-services</string>
 	</dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>我们需要通过访问照片应用来保存封面</string>
 </dict>
 </plist>
