--- a/BCD/Supporting Files/BCD.entitlements
+++ b/BCD/Supporting Files/BCD.entitlements
@@ -2,11 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>aps-environment</key>
-	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.Future-Code-Institute.bilibilicdgroup</string>
+		<string>group.com.Future-Code-Institute.bili_cita_group</string>
 	</array>
 </dict>
 </plist>
