--- a/BCDSharing/BCDSharing.entitlements
+++ b/BCDSharing/BCDSharing.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.Future-Code-Institute.bilibilicdgroup</string>
+		<string>group.com.Future-Code-Institute.bili_cita_group</string>
 	</array>
 </dict>
 </plist>
